
syntax = "proto3";

package spotify.playplay.proto;

//PlayPlayLicenseRequest
message PlayIntentRequest {
    int32 version = 1;
    bytes token = 2;
    optional bytes cache_id = 3;
    Interactivity interactivity = 4;
    ContentType content_type = 5;
    int64 timestamp = 6;
}

enum Interactivity {
    UNKNOWN_INTERACTIVITY = 0;
    INTERACTIVE = 1;
    DOWNLOAD = 2;
}

enum ContentType {
    UNKNOWN_CONTENT_TYPE = 0;
    AUDIO_TRACK = 1;
    AUDIO_EPISODE = 2;
    AUDIO_ADD = 3;
}

//PlayPlayLicenseResponse
message PlayIntentResponse {
    bytes obfuscated_key = 1;
    bytes b4_seq = 2;
}

///resolve-storage response
message DownloadInfoResponse {
    DownloadInfoStatus result = 1;
    repeated string direct_links = 2;
    bytes file_id = 4;
    int32 expires_in_s = 5;
}

enum DownloadInfoStatus {
    CDN = 0;
    STORAGE = 1;
    RESTRICTED = 3;
}
